# gerard-portfolio

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml
src/: entrypoint  pyproject.toml
src/core/: asgi.py  settings.py  wsgi.py
