[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Admin <gerardmga@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.2"
djangorestframework = "^3.14.0"
markdown = "^3.4.1"
django-filter = "^22.1"
requests = "^2.28.1"
celery = "^5.2.7"
pydantic = "^1.9.1"
emails = "^0.6"
pytest = "^7.1.2"
ipython = "^8.4.0"
aiohttp = "^3.8.1"
redis = "^4.3.4"
flower = "^1.1.0"
boto3 = "^1.24.65"
pytest-mock = "^3.8.2"

[tool.poetry.dev-dependencies]
mypy = "^0.961"
black = "^22.6.0"
isort = "^5.10.1"
autoflake = "^1.4"
flake8 = "^4.0.1"
sqlalchemy-stubs = "^0.4"
pytest-cov = "^3.0.0"
pytest-asyncio = "^0.18.3"


[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
